--- a/TALLERES/TALLER_6/formulario.html
+++ b/TALLERES/TALLER_6/formulario.html
@@ -9,34 +9,37 @@
     <h2>Formulario de Registro Avanzado</h2>
     <form action="procesar.php" method="POST" enctype="multipart/form-data">
         <label for="nombre">Nombre:</label>
-        <input type="text" id="nombre" name="nombre" required><br><br>
+        <input type="text" id="nombre" name="nombre" value="<?= htmlspecialchars($_POST['nombre'] ?? '') ?>" required><br><br>
 
         <label for="email">Email:</label>
-        <input type="email" id="email" name="email" required><br><br>
+        <input type="email" id="email" name="email" value="<?= htmlspecialchars($_POST['email'] ?? '') ?>" required><br><br>
 
-        <label for="edad">Edad:</label>
-        <input type="number" id="edad" name="edad" required><br><br>
+        <label for="fecha_nacimiento">Fecha de Nacimiento:</label>
+        <input type="date" id="fecha_nacimiento" name="fecha_nacimiento" value="<?= htmlspecialchars($_POST['fecha_nacimiento'] ?? '') ?>" required><br><br>
 
         <label for="sitio_web">Sitio Web:</label>
-        <input type="url" id="sitio_web" name="sitio_web"><br><br>
+        <input type="url" id="sitio_web" name="sitio_web" value="<?= htmlspecialchars($_POST['sitio_web'] ?? '') ?>"><br><br>
 
         <label for="genero">Género:</label>
         <select id="genero" name="genero">
-            <option value="masculino">Masculino</option>
-            <option value="femenino">Femenino</option>
-            <option value="otro">Otro</option>
+            <option value="masculino" <?= (($_POST['genero'] ?? '') == 'masculino') ? 'selected' : '' ?>>Masculino</option>
+            <option value="femenino" <?= (($_POST['genero'] ?? '') == 'femenino') ? 'selected' : '' ?>>Femenino</option>
+            <option value="otro" <?= (($_POST['genero'] ?? '') == 'otro') ? 'selected' : '' ?>>Otro</option>
         </select><br><br>
 
         <label>Intereses:</label><br>
-        <input type="checkbox" id="deportes" name="intereses[]" value="deportes">
+        <?php
+        $intereses = $_POST['intereses'] ?? [];
+        ?>
+        <input type="checkbox" id="deportes" name="intereses[]" value="deportes" <?= in_array('deportes', $intereses) ? 'checked' : '' ?>>
         <label for="deportes">Deportes</label><br>
-        <input type="checkbox" id="musica" name="intereses[]" value="musica">
+        <input type="checkbox" id="musica" name="intereses[]" value="musica" <?= in_array('musica', $intereses) ? 'checked' : '' ?>>
         <label for="musica">Música</label><br>
-        <input type="checkbox" id="lectura" name="intereses[]" value="lectura">
+        <input type="checkbox" id="lectura" name="intereses[]" value="lectura" <?= in_array('lectura', $intereses) ? 'checked' : '' ?>>
         <label for="lectura">Lectura</label><br><br>
 
         <label for="comentarios">Comentarios:</label><br>
-        <textarea id="comentarios" name="comentarios" rows="4" cols="50"></textarea><br><br>
+        <textarea id="comentarios" name="comentarios" rows="4" cols="50"><?= htmlspecialchars($_POST['comentarios'] ?? '') ?></textarea><br><br>
 
         <label for="foto_perfil">Foto de Perfil:</label>
         <input type="file" id="foto_perfil" name="foto_perfil"><br><br>
